# Agentic-Hallucination-Guardrail

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
documentation/: plan.md  qa-audit-backend.md  qa-audit-frontend.md  skeleton-diagrams.md  user-critique.md
documentation/reports/: key-market-data.md
documentation/sprint-0/: research.md
documentation/sprint-1/: architecture.md
documentation/sprint-2/: agent-design.md
documentation/sprint-3/: api-spec.md  ci-cd-spec.md  containerization.md  file-manifest.md
documentation/sprint-4/: ux-standards.md
documentation/sprint-5/: acceptance-criteria.md
documentation/sprint-6/: testing-strategy.md
src/backend/: .coveragerc  Dockerfile  api.py  pyproject.toml  requirements.txt
src/backend/agents/: critic_agent.py
src/backend/config/: validation_rules.json
src/backend/db/: database.py
src/backend/evaluation/: evaluator.py
src/backend/orchestration/: graph_engine.py  mother_agent.py
src/backend/tests/: conftest.py  test_api_endpoints.py  test_api_endpoints_extended.py  test_api_stream.py  test_benchmarks.py  test_critic_agent.py  test_database.py  test_evaluator.py  test_golden_regression.py  test_graph_engine.py  test_mother_agent.py
src/backend/tests/fixtures/: golden_100.json
src/frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/test/: page.test.tsx
