[project]
name = "agentic-hallucination-guardrail"
version = "0.1.0"
description = "LLMOps pipeline with agentic hallucination detection and correction"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: full pipeline tests (deselect with -m 'not slow')",
    "gpu: requires GPU-accelerated Ollama instance",
    "latency: latency-sensitive benchmarks",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
